# wstroke

./: .gitignore  LICENSE  NEWS  README.md  actiondb.cc  actiondb.h  actiondb_config.cc  actiondb_plugin.cc  actions.cc  actions.h  cellrenderertextish.c  cellrenderertextish.vala  convert_keycodes.cc  convert_keycodes.h  easystroke.xml  easystroke_gestures.cpp  fake_mouse_button.patch  gesture.cc  gesture.h  gui.glade  input_events.cpp  input_events.hpp  input_inhibitor.c  input_inhibitor.h  main.cc  meson.build  resources.xml  stroke_draw.cc  stroke_draw.h  stroke_drawing_area.cpp  stroke_drawing_area.h  toplevel-grabber-test.c  toplevel-grabber.c  wlr-foreign-toplevel-management-unstable-v1.xml  wstroke-config.1  wstroke-config.desktop  wstroke.xml
debian/: README.Debian  changelog  control  copyright  files  rules  watch
debian/upstream/: metadata  signing-key.asc
example/: actions-wstroke  actions-wstroke-2  meson.build
icons/: convert-icons.fsh  meson.build
input-inhibitor/: input_inhibitor.c  meson.build
src/: actiondb.cc  actiondb.h  actions.cc  actions.h  appchooser.cc  appchooser.h  cellrenderertextish.c  cellrenderertextish.h  cellrenderertextish.vala  config.h.in  convert_keycodes.cc  convert_keycodes.h  easystroke_gestures.cpp  gui.glade  input_events.cpp  input_events.hpp  input_inhibitor.vapi  main.cc  meson.build  stroke_draw.h  stroke_drawing_area.cpp  stroke_drawing_area.h
toplevel-grabber/: meson.build  toplevel-grabber-test.c  toplevel-grabber.c  toplevel-grabber.h
