install_data('plugin-wstroke.svg', install_dir: wayfire.get_variable(pkgconfig: 'icondir'))
install_data('wstroke.svg',                        install_dir: join_paths(icon_dir, 'hicolor', 'scalable', 'apps'))
install_data(join_paths('48x48',   'wstroke.png'), install_dir: join_paths(icon_dir, 'hicolor', '48x48',    'apps'))
install_data(join_paths('64x64',   'wstroke.png'), install_dir: join_paths(icon_dir, 'hicolor', '64x64',    'apps'))
install_data(join_paths('72x72',   'wstroke.png'), install_dir: join_paths(icon_dir, 'hicolor', '72x72',    'apps'))
install_data(join_paths('96x96',   'wstroke.png'), install_dir: join_paths(icon_dir, 'hicolor', '96x96',    'apps'))
install_data(join_paths('128x128', 'wstroke.png'), install_dir: join_paths(icon_dir, 'hicolor', '128x128',  'apps'))
install_data(join_paths('160x160', 'wstroke.png'), install_dir: join_paths(icon_dir, 'hicolor', '160x160',  'apps'))
install_data(join_paths('192x192', 'wstroke.png'), install_dir: join_paths(icon_dir, 'hicolor', '192x192',  'apps'))
